# igem-2023-wiki

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: gitlab_mirror.yml
SEPiA Design Kit/: Blurs.pxd  Pilly.curve
SEPiA Design Kit/Sponsors/Edit/: LMU.curve  fdtum.curve
documentation/: mkdocs.yml
documentation/docs/: description.md  index.md  test.md
documentation/overrides/: home_bottom.html  home_sep.html
documentation/site/: 404.html  index.html
documentation/site/attributions/: index.html
documentation/site/awards/: index.html
documentation/site/contribution/: index.html
documentation/site/description/: index.html
documentation/site/education/: index.html
documentation/site/engineering/: index.html
documentation/site/entrepreneurship/: index.html
documentation/site/experiments/: index.html
documentation/site/hardware/: index.html
documentation/site/human_practices/: index.html
documentation/site/inclusivity/: index.html
documentation/site/measurement/: index.html
wiki/: footer.html  layout.html  menu.html  mkdocs.insiders.yml  mkdocs.yml
wiki/docs/: attributions.md  contact.md  content_template_test.md  contribution.md  description.md  description_alt.md  education.md  engineering.md  entrepreneurship.md  experiments.md  human-practices.md  index.md  model.md  notebook.md  notebook.yaml  project.md  results.md  safety.md  team.md  test.md  test_child.md  test_upper.md
wiki/overrides/: main.html
wiki/pages/: attributions.html
wiki/site/: 404.html  index.html  sitemap.xml
(+122 files in other folders)
