[tool.poetry]
name = "munichbioinformatics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Frozen-Flask = "^0.18"
mkdocs-material = "^9.1.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
